// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArgumentCard /> renders correcty 1`] = `
<Card
  bg="white"
  p={6}
>
  <ForwardRef
    direction="column"
    height="100%"
  >
    <ForwardRef
      alignItems="center"
      direction="row"
      justifyContent="space-between"
      mb={2}
    >
      <ForwardRef
        alignItems="center"
        direction="row"
      >
        <Text
          maxWidth="100px"
          mr={2}
        >
          Agui
        </Text>
        <Tag
          variant="green"
        >
          <Text
            as="span"
            fontSize={1}
            fontWeight="700"
            lineHeight="sm"
            uppercase={true}
          >
            <FormattedMessage
              id="global.for"
              values={Object {}}
            />
          </Text>
        </Tag>
      </ForwardRef>
      <ForwardRef
        align="center"
        direction="row"
      >
        <Text
          color="neutral-gray.500"
          fontSize={
            Array [
              1,
              3,
            ]
          }
        >
          Invalid date
        </Text>
        <Button
          color="neutral-gray.500"
          disabled={false}
          onClick={[Function]}
          rightIcon="PENCIL"
        />
        <Button
          color="neutral-gray.500"
          disabled={false}
          onClick={[Function]}
          rightIcon="TRASH"
        />
      </ForwardRef>
    </ForwardRef>
    <Text>
      Je suis pour le LSD dans nos cantines
       
    </Text>
    <ForwardRef
      align="center"
      flexDirection="row"
      justify={
        Array [
          "center",
          "flex-start",
        ]
      }
      mt={
        Array [
          "auto",
          3,
        ]
      }
    >
      <Connect(LoginOverlay)>
        <ButtonQuickAction
          icon="THUMB_UP"
          iconColor="green.500"
          label={
            <FormattedMessage
              id="global.cancel"
              values={Object {}}
            />
          }
          mr={1}
          onClick={[Function]}
          size="md"
          variantColor="green"
        />
      </Connect(LoginOverlay)>
      <Text
        as="span"
        color="neutral-gray.700"
        fontSize={
          Array [
            4,
            3,
          ]
        }
        ml={
          Array [
            1,
            0,
          ]
        }
      >
        500
      </Text>
    </ForwardRef>
  </ForwardRef>
</Card>
`;

exports[`<ArgumentCard /> renders correcty on mobile 1`] = `
<Card
  bg="white"
  p={6}
>
  <ForwardRef
    direction="column"
    height="100%"
  >
    <ForwardRef
      alignItems="center"
      direction="row"
      justifyContent="space-between"
      mb={2}
    >
      <ForwardRef
        alignItems="center"
        direction="row"
      >
        <Text
          maxWidth="100px"
          mr={2}
        >
          Agui
        </Text>
        <Tag
          variant="green"
        >
          <Text
            as="span"
            fontSize={1}
            fontWeight="700"
            lineHeight="sm"
            uppercase={true}
          >
            <FormattedMessage
              id="global.for"
              values={Object {}}
            />
          </Text>
        </Tag>
      </ForwardRef>
      <ForwardRef
        align="center"
        direction="row"
      >
        <Text
          color="neutral-gray.500"
          fontSize={
            Array [
              1,
              3,
            ]
          }
        >
          Invalid date
        </Text>
        <Button
          color="neutral-gray.500"
          disabled={false}
          onClick={[Function]}
          rightIcon="PENCIL"
        />
        <Button
          color="neutral-gray.500"
          disabled={false}
          onClick={[Function]}
          rightIcon="TRASH"
        />
      </ForwardRef>
    </ForwardRef>
    <Text>
      Je suis pour le LSD dans nos cantines
       
    </Text>
    <ForwardRef
      align="center"
      flexDirection="row"
      justify={
        Array [
          "center",
          "flex-start",
        ]
      }
      mt={
        Array [
          "auto",
          3,
        ]
      }
    >
      <Connect(LoginOverlay)>
        <ButtonQuickAction
          icon="THUMB_UP"
          iconColor="green.500"
          label={
            <FormattedMessage
              id="global.cancel"
              values={Object {}}
            />
          }
          mr={1}
          onClick={[Function]}
          size="lg"
          variantColor="green"
        />
      </Connect(LoginOverlay)>
      <Text
        as="span"
        color="neutral-gray.700"
        fontSize={
          Array [
            4,
            3,
          ]
        }
        ml={
          Array [
            1,
            0,
          ]
        }
      >
        500
      </Text>
    </ForwardRef>
  </ForwardRef>
</Card>
`;

exports[`<ArgumentCard /> renders correcty when connected as admin 1`] = `
<Card
  bg="white"
  p={6}
>
  <ForwardRef
    direction="column"
    height="100%"
  >
    <ForwardRef
      alignItems="center"
      direction="row"
      justifyContent="space-between"
      mb={2}
    >
      <ForwardRef
        alignItems="center"
        direction="row"
      >
        <Text
          maxWidth="100px"
          mr={2}
        >
          Agui
        </Text>
        <Tag
          variant="green"
        >
          <Text
            as="span"
            fontSize={1}
            fontWeight="700"
            lineHeight="sm"
            uppercase={true}
          >
            <FormattedMessage
              id="global.for"
              values={Object {}}
            />
          </Text>
        </Tag>
      </ForwardRef>
      <ForwardRef
        align="center"
        direction="row"
      >
        <Text
          color="neutral-gray.500"
          fontSize={
            Array [
              1,
              3,
            ]
          }
        >
          Invalid date
        </Text>
        <Button
          color="neutral-gray.500"
          disabled={false}
          onClick={[Function]}
          rightIcon="PENCIL"
        />
        <Button
          color="neutral-gray.500"
          disabled={false}
          onClick={[Function]}
          rightIcon="TRASH"
        />
      </ForwardRef>
    </ForwardRef>
    <Text>
      Je suis pour le LSD dans nos cantines
       
    </Text>
    <ForwardRef
      align="center"
      flexDirection="row"
      justify={
        Array [
          "center",
          "flex-start",
        ]
      }
      mt={
        Array [
          "auto",
          3,
        ]
      }
    >
      <Connect(LoginOverlay)>
        <ButtonQuickAction
          icon="THUMB_UP"
          iconColor="green.500"
          label={
            <FormattedMessage
              id="global.cancel"
              values={Object {}}
            />
          }
          mr={1}
          onClick={[Function]}
          size="md"
          variantColor="green"
        />
      </Connect(LoginOverlay)>
      <Text
        as="span"
        color="neutral-gray.700"
        fontSize={
          Array [
            4,
            3,
          ]
        }
        ml={
          Array [
            1,
            0,
          ]
        }
      >
        500
      </Text>
    </ForwardRef>
  </ForwardRef>
</Card>
`;

exports[`<ArgumentCard /> renders correcty when connected as viewer 1`] = `
<Card
  bg="white"
  p={6}
>
  <ForwardRef
    direction="column"
    height="100%"
  >
    <ForwardRef
      alignItems="center"
      direction="row"
      justifyContent="space-between"
      mb={2}
    >
      <ForwardRef
        alignItems="center"
        direction="row"
      >
        <Text
          maxWidth="100px"
          mr={2}
        >
          Agui
        </Text>
        <Tag
          variant="green"
        >
          <Text
            as="span"
            fontSize={1}
            fontWeight="700"
            lineHeight="sm"
            uppercase={true}
          >
            <FormattedMessage
              id="global.for"
              values={Object {}}
            />
          </Text>
        </Tag>
      </ForwardRef>
      <ForwardRef
        align="center"
        direction="row"
      >
        <Text
          color="neutral-gray.500"
          fontSize={
            Array [
              1,
              3,
            ]
          }
        >
          Invalid date
        </Text>
        <Button
          color="neutral-gray.500"
          disabled={false}
          onClick={[Function]}
          rightIcon="PENCIL"
        />
        <Button
          color="neutral-gray.500"
          disabled={false}
          onClick={[Function]}
          rightIcon="TRASH"
        />
        <Menu>
          <Menu.Button
            as={Symbol(react.fragment)}
          >
            <Button
              aria-label="global.menu"
              color="blue.900"
              rightIcon="MORE"
            />
          </Menu.Button>
          <Menu.List>
            <Menu.ListItem>
              <Button
                color="blue.900"
                leftIcon="FLAG"
                onClick={[Function]}
              >
                global.report.submit
              </Button>
            </Menu.ListItem>
          </Menu.List>
        </Menu>
      </ForwardRef>
    </ForwardRef>
    <Text>
      Je suis pour le LSD dans nos cantines
       
    </Text>
    <ForwardRef
      align="center"
      flexDirection="row"
      justify={
        Array [
          "center",
          "flex-start",
        ]
      }
      mt={
        Array [
          "auto",
          3,
        ]
      }
    >
      <Connect(LoginOverlay)>
        <ButtonQuickAction
          icon="THUMB_UP"
          iconColor="green.500"
          label={
            <FormattedMessage
              id="global.cancel"
              values={Object {}}
            />
          }
          mr={1}
          onClick={[Function]}
          size="md"
          variantColor="green"
        />
      </Connect(LoginOverlay)>
      <Text
        as="span"
        color="neutral-gray.700"
        fontSize={
          Array [
            4,
            3,
          ]
        }
        ml={
          Array [
            1,
            0,
          ]
        }
      >
        500
      </Text>
    </ForwardRef>
  </ForwardRef>
</Card>
`;
